Fixes #527 - Speech to text not working on Chrome browser on mobile phone

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -46,15 +46,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#183850', end
   transition: background-color 0.218s,border 0.218s,box-shadow 0.218s;
   width: 80px;
   height: 80px;
+  position: relative;
   background-color:#FE2222;
-}
-.active{
   animation: blinker 1s cubic-bezier(.5, 0, 1, 1) infinite alternate;
 }
 
 @keyframes blinker {
-  from { opacity: 1; }
-  to { opacity: 0.3; }
+  from { 
+    opacity: 1;
+    box-shadow: 0 4px 10px rgba(241, 241, 241, 0.5),
+    0 0 0 10px rgba(102, 102, 102, 0.1); 
+  }
+  to { opacity: 0.3;
+    box-shadow: 0 4px 10px rgba(241, 241, 241, 0.5), 
+    0 0 0 20px rgba(102, 102, 102, 0); }
 }
 .Modal{
   top:0;
